<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/p1"
        android:title="@string/menu_priority_1"
        android:icon="@drawable/ic_priority"
        app:iconTint="@color/red_500" />

    <item
        android:id="@+id/p2"
        android:title="@string/menu_priority_2"
        android:tooltipText=""
        android:icon="@drawable/ic_priority"
        app:iconTint="@color/yellow_500" />

    <item
        android:id="@+id/p3"
        android:title="@string/menu_priority_3"
        android:icon="@drawable/ic_priority"
        app:iconTint="@color/blue_500" />

    <item
        android:id="@+id/p4"
        android:title="@string/menu_priority_4"
        android:icon="@drawable/ic_priority_none"
        app:iconTint="@color/gray" />

</menu>