<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/task_detail_project"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/task_detail_delete"
        app:layout_constraintEnd_toStartOf="@+id/task_detail_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/dummyproject"
        android:textAppearance="?attr/textAppearanceHeadline5"/>

    <Button
        android:id="@+id/task_detail_delete"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/task_detail_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_detail_project" />

    <EditText
        android:id="@+id/task_detail_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:textAppearance="?attr/textAppearanceDisplaySmall"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/task_detail_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/task_detail_checkbox"
        app:layout_constraintTop_toTopOf="@+id/task_detail_checkbox"
        tools:text="@string/dummytask" />

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/task_detail_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/task_detail_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/task_detail_title"
        app:icon="@drawable/ic_today"
        tools:text="@string/dummydate" />

</androidx.constraintlayout.widget.ConstraintLayout>